Page template updates

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -753,9 +753,11 @@ h1.mdc-typography--title {
         }
     }
     .mdc-card__media {
-        height: 64px;
+        height: 80px;
+        padding: $spacing-unit*(3/4) $spacing-unit;
         background-size: contain;
         background-repeat: no-repeat;
+        background-origin: content-box;
         background-color: var(--mdc-theme-primary);
         a {
             color: var(--mdc-theme-primary-dark);
