--- a/functions/test-db/json2/scvo/templates/members.hbs
+++ b/functions/test-db/json2/scvo/templates/members.hbs
@@ -1,36 +1,36 @@
-<div class="splash-image {{> header_splash}}">
-    <div class="container-fluid">
-        <div class="mdc-layout-grid">
-            {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-            <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-            {{else}}
-            <h1 class="header-text">
-                <span class="header-text-banner">
-                    SCVO Members
-                </span>
-            </h1>
-            {{/if}}
+<div class="members">
+    <div class="splash-image {{> header_splash}}">
+        <div class="container-fluid">
+            <div class="mdc-layout-grid">
+                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
+                {{else}}
+                <h1 class="header-text">
+                    <span class="header-text-banner">
+                        SCVO Members
+                    </span>
+                </h1>
+                {{/if}}
+            </div>
         </div>
     </div>
-</div>
+    <div class="container-fluid">
+        <ul class="breadcrumbs">
+            <li><a href="/">SCVO</a></li>
+            <li><a href="/about">About</a></li>
+        </ul>
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
+                    [Filters TBC]
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
+                    {{#each primaryResponse.hits.hits}}
+                    {{{_source.rendered.list}}}
+                    {{/each}}
 
-<div class="container-fluid">
-    <ul class="breadcrumbs">
-        <li><a href="/">SCVO</a></li>
-        <li><a href="/about">About</a></li>
-    </ul>
-
-    <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
-                [Filters TBC]
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
-                {{#each primaryResponse.hits.hits}}
-                {{{_source.rendered.list}}}
-                {{/each}}
-
-                {{> pagination paging=paging params=params}}
+                    {{> pagination paging=paging params=params}}
+                </div>
             </div>
         </div>
     </div>
