--- a/functions/test-db/json2/scvo/templates/page.hbs
+++ b/functions/test-db/json2/scvo/templates/page.hbs
@@ -1,50 +1,49 @@
-<div class="splash-image {{> header_splash}}">
-    <div class="container-fluid">
-        <div class="mdc-layout-grid">
-            {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-            <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-            {{else}}
-            <h1 class="header-text">
-                <span class="header-text-banner">
-                    {{#if primaryResponse.hits.hits.[0]}}
-                    {{{primaryResponse.hits.hits.[0]._source.title}}}
-                    {{else}}
-                    404: Not found
-                    {{/if}}
-                </span>
-            </h1>
-            {{/if}}
-        </div>
-    </div>
-</div>
-
-<div class="container-fluid">
-    {{> breadcrumbs}}
-
-    <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content page-content">
-                {{#if primaryResponse.hits.hits.[0]}}
-                {{#with primaryResponse.hits.hits.[0]._source}}
-                {{{rendered.full}}}
-                {{/with}}
+<div class="page">
+    <div class="splash-image {{> header_splash}}">
+        <div class="container-fluid">
+            <div class="mdc-layout-grid">
+                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
                 {{else}}
-                <h2>Page not found</h2>
-                <!-- Please try searching. -->
+                <h1 class="header-text">
+                    <span class="header-text-banner">
+                        {{#if primaryResponse.hits.hits.[0]}}
+                        {{{primaryResponse.hits.hits.[0]._source.title}}}
+                        {{else}}
+                        404: Not found
+                        {{/if}}
+                    </span>
+                </h1>
                 {{/if}}
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
-                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
-                <div class="related-posts">
-                    <h3 class="blogs">Related posts</h3>
-                    <ul class="v-margin supplimentary-list">
-                        {{#each supplimentaryResponses.related_posts.hits.hits}}
-                        {{{_source.rendered.sidebar_mini}}}
-                        {{/each}}
-                    </ul>
-                    <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
+        </div>
+    </div>
+    <div class="container-fluid">
+        {{> breadcrumbs}}
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content page-content">
+                    {{#if primaryResponse.hits.hits.[0]}}
+                    {{#with primaryResponse.hits.hits.[0]._source}}
+                    {{{rendered.full}}}
+                    {{/with}}
+                    {{else}}
+                    <h2>Page not found</h2>
+                    {{/if}}
                 </div>
-                {{/compare}}
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar page-sidebar">
+                    {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
+                    <div class="related-posts">
+                        <h3 class="blogs">Related posts</h3>
+                        <ul class="v-margin supplimentary-list">
+                            {{#each supplimentaryResponses.related_posts.hits.hits}}
+                            {{{_source.rendered.sidebar_mini}}}
+                            {{/each}}
+                        </ul>
+                        <a class="v-margin mdc-button mdc-button--raised" href="/post/categories/{{primaryResponse.hits.hits.[0]._source.categories_slug.[0]}}">Read more</a>
+                    </div>
+                    {{/compare}}
+                </div>
             </div>
         </div>
     </div>
