--- a/functions/test-db/json2/scvo/templates/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/post-category.hbs
@@ -1,38 +1,38 @@
-<div class="splash-image {{> header_splash}}">
-    <div class="container-fluid">
-        <div class="mdc-layout-grid">
-            {{#if primaryResponse.hits.hits.[0]._source.header_text}}
-            <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
-            {{else}}
-            <h1 class="header-text">
-                <span class="header-text-banner">
-                    {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}
-                    {{#compare this "===" (lastItem (split ../params.path '_'))}}
-                    {{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}
-                    {{/compare}}
-                    {{/each}}
-                </span>
-            </h1>
-            {{/if}}
+<div class="post post-category">
+    <div class="splash-image {{> header_splash}}">
+        <div class="container-fluid">
+            <div class="mdc-layout-grid">
+                {{#if primaryResponse.hits.hits.[0]._source.header_text}}
+                <img src="{{primaryResponse.hits.hits.[0]._source.header_text}}" alt="{{primaryResponse.hits.hits.[0]._source.title}}" class="header-text" />
+                {{else}}
+                <h1 class="header-text">
+                    <span class="header-text-banner">
+                        {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}
+                        {{#compare this "===" (lastItem (split ../params.path '_'))}}
+                        {{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}
+                        {{/compare}}
+                        {{/each}}
+                    </span>
+                </h1>
+                {{/if}}
+            </div>
         </div>
     </div>
-</div>
-
-<div class="container-fluid">
-    {{> breadcrumbs_posts}}
-
-    <div class="mdc-layout-grid">
-        <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content post-content">
-                <ul class="supplimentary-list">
-                    {{#each primaryResponse.hits.hits}}
-                    {{{_source.rendered.list}}}
-                    {{/each}}
-                </ul>
-                {{> pagination paging=paging params=params}}
-            </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
-                <!-- TBC -->
+    <div class="container-fluid">
+        {{> breadcrumbs_posts}}
+        <div class="mdc-layout-grid">
+            <div class="mdc-layout-grid__inner">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content post-content">
+                    <ul class="supplimentary-list">
+                        {{#each primaryResponse.hits.hits}}
+                        {{{_source.rendered.list}}}
+                        {{/each}}
+                    </ul>
+                    {{> pagination paging=paging params=params}}
+                </div>
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
+                    <!-- TBC -->
+                </div>
             </div>
         </div>
     </div>
