--- a/functions/test-db/json2/scvo/templates/scvo.hbs
+++ b/functions/test-db/json2/scvo/templates/scvo.hbs
@@ -171,7 +171,7 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="//unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script type="text/javascript" src="//unpkg.com/material-components-web@latest/dist/material-components-web.js"></script>
     <script type="text/javascript">
         // Cookie Consent
         window.cookieconsent_options = {
