--- a/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-digital-search.hbs
@@ -31,7 +31,7 @@
                 <hr />
 
                 <form [searchroute]="'grant_search'">
-                    <div class="mdc-textfield mdc-textfield--upgraded" data-mdc-auto-init="MDCTextfield">
+                    <div class="mdc-textfield mdc-textfield--upgraded">
                         <input type="text" class="mdc-textfield__input" name="q" id="grant-digital-keywords" value="{{params.query.q}}">
                         <label class="mdc-textfield__label" for="grant-digital-keywords">Keywords</label>
                         <div class="mdc-textfield__bottom-line"></div>
