--- a/functions/test-db/json2/scvo/templates/page-full-width.hbs
+++ b/functions/test-db/json2/scvo/templates/page-full-width.hbs
@@ -11,9 +11,9 @@
                     </span>
                 </h1>
                 {{/if}}
-            </div>
-        </div>
-    </div>
+            </div><!-- /mdc-layout-grid -->
+        </div><!-- /container-fluid -->
+    </div><!-- /splash-image -->
     <div class="container-fluid">
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
