--- a/functions/test-db/json2/scvo/templates/page-full-width.hbs
+++ b/functions/test-db/json2/scvo/templates/page-full-width.hbs
@@ -17,7 +17,7 @@
     <div class="container-fluid">
         {{> breadcrumbs}}
         <div class="content page-content">
-            {{{with primaryResponse.hits.hits.[0]._source.rendered.full}}}
+            {{{primaryResponse.hits.hits.[0]._source.rendered.full}}}
         </div><!-- /content -->
     </div><!-- /container-fluid -->
 </div><!-- /page page-full-width -->
