Added 'equal-height' cards in grids

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -530,6 +530,18 @@ a:hover {
     }
 }
 
+// Grid Cards ==================================================================
+
+.mdc-layout-grid.equal-height .mdc-layout-grid__cell {
+    display: flex;
+    .mdc-card {
+        justify-content: start;
+        .mdc-card__supporting-text {
+            flex: 1 0 auto;
+        }
+    }
+}
+
 // Pagination ==================================================================
 
 .pagination {
