New digital content

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -622,6 +622,12 @@ a:hover {
         background: transparent;
     }
 }
+.digital .callout-image {
+    position: relative;
+    background-size: cover;
+    background-position: center center;
+    background-image: linear-gradient(var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-06.jpg');
+}
 .splash-image {
     position: relative;
     background-size: cover;
