--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -137,6 +137,7 @@ body {
 main {
     background-color: white;
 }
+.scvo-cms-page-21696 .page-info,
 .container-fluid {
     max-width: 1280px;
     width: 95%;
@@ -626,7 +627,9 @@ a:hover {
     position: relative;
     background-size: cover;
     background-position: center center;
-    background-image: linear-gradient(var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/10/Drake-Music-06.jpg');
+    background-image: linear-gradient(var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/11/Dunaverty-Hall.jpg');
+    color: white;
+    padding: $spacing-unit*1.5 0 $spacing-unit*2;
 }
 .splash-image {
     position: relative;
@@ -916,6 +919,9 @@ h1.mdc-typography--title {
 
 .mdc-layout-grid {
     padding: 0;
+    .mdc-card {
+        width: 100%;
+    }
 }
 
 .menu-sidebar {
