--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -629,7 +629,8 @@ a:hover {
     background-position: center center;
     background-image: linear-gradient(var(--mdc-theme-primary-fade), var(--mdc-theme-primary-fade)),url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2017/11/Dunaverty-Hall.jpg');
     color: white;
-    padding: $spacing-unit*1.5 0 $spacing-unit*2;
+    padding: $spacing-unit*1.5 0 $spacing-unit*1.5;
+    margin: $spacing-unit 0;
 }
 .splash-image {
     position: relative;
@@ -975,12 +976,14 @@ h1.mdc-typography--title {
         padding-left: 0;
         li {
             list-style: none;
+            padding-left: $spacing-unit*1.5;
         }
         li::before {
             color: var(--mdc-theme-primary);
             content: "\25A0";
             font-size: 1rem;
-            padding-right: 0.75rem;
+            margin-left: -$spacing-unit*1.5;
+            padding-right: 0.95rem;
             position: relative;
             top: 0em;
         }
