--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -972,7 +972,7 @@ h1.mdc-typography--title {
 }
 
 .container-content {
-    ul {
+    ul:not(.breadcrumbs) {
         padding-left: 0;
         li {
             list-style: none;
