--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1101,6 +1101,7 @@ ul.breadcrumbs {
                 display: inline-block;
                 font-size: 90%;
                 margin: 0 0 0.25rem 0.1rem;
+                padding: 0 !important;
                 a {
                     background: var(--mdc-theme-primary-dark);
                     padding: 0.05rem 0.4rem 0.1rem;
