--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -550,6 +550,7 @@ a:hover {
     display: block !important;
     padding-top: $spacing-unit !important;
     li {
+        padding: 0 !important;
         height: $spacing-unit*2;
         width: $spacing-unit*2;
         border-radius: 50%;
