--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -632,6 +632,12 @@ a:hover {
     color: white;
     padding: $spacing-unit*1.5 0 $spacing-unit*1.5;
     margin: $spacing-unit 0;
+    .mdc-card__actions a,
+    .mdc-card__supporting-text,
+    .mdc-card__supporting-text a,
+    .mdc-card__title {
+        color: white;
+    }
 }
 .splash-image {
     position: relative;
