--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -674,7 +674,7 @@ a:hover {
             max-height: 64px;
             max-width: 64px;
             vertical-align: bottom;
-            margin: $spacing-unit/3 $spacing-unit $spacing-unit*2 0;
+            margin: -$spacing-unit/5 $spacing-unit $spacing-unit 0;
             float: left;
         }
         .mdc-typography--caption {
@@ -835,13 +835,13 @@ h1.mdc-typography--title {
             color: var(--mdc-theme-primary-dark);
         }
     }
-    .digital .mdc-card__media {
+    .project-digital .mdc-card__media {
         background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/digital.png');
     }
-    .open-government .mdc-card__media {
+    .project-open-government .mdc-card__media {
         background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/open-government.png');
     }
-    .cjs .mdc-card__media {
+    .project-cjs .mdc-card__media {
         background-image: url('https://storage.cloud.google.com/scvo-cms/scvo-cms-content/images/banners/cjs.png');
     }
 }
